[gd_scene format=3 uid="uid://vqh5mw41w124"]

[ext_resource type="Script" uid="uid://oj8a3bh1tf2c" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://dwrs68ec4iqx0" path="res://resources/Kenney Pixel.ttf" id="2_bqqt6"]
[ext_resource type="PackedScene" uid="uid://boq4y64gxn0so" path="res://scenes/fade_transition.tscn" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://dxtxrv7t2gl6j" path="res://resources/parallax_bg.png" id="2_wu84c"]

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = ExtResource("2_bqqt6")
font_size = 48
font_color = Color(0.9999998, 0.2185705, 0.6459585, 1)
outline_size = 8
outline_color = Color(1, 0.7529412, 0, 1)

[node name="MainMenu" type="Node2D" unique_id=556194598]
script = ExtResource("1_ekxnf")

[node name="Parallax2D" type="Parallax2D" parent="." unique_id=1633532893]
scroll_offset = Vector2(335, 26)
repeat_size = Vector2(0, 1000)
autoscroll = Vector2(4, 4)

[node name="Background" type="Sprite2D" parent="Parallax2D" unique_id=1623011452]
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("2_wu84c")

[node name="Control" type="Control" parent="." unique_id=60007438]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=1689412678]
layout_mode = 0
offset_right = 384.0
offset_bottom = 216.0
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer" unique_id=135590591]
layout_mode = 2
size_flags_horizontal = 4
text = "WHAC-A-FROG"
label_settings = SubResource("LabelSettings_wu84c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="Control/VBoxContainer" unique_id=1092216969]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PLAY
"

[node name="Quit" type="Button" parent="Control/VBoxContainer" unique_id=1062946083]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "QUIT"

[node name="FadeTransition" parent="." unique_id=1765706661 instance=ExtResource("2_ekxnf")]
visible = false
offset_right = 384.0
offset_bottom = 216.0

[node name="Timer" type="Timer" parent="FadeTransition" unique_id=732914540]

[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="FadeTransition/Timer" to="." method="_on_timer_timeout"]
